# rust-api

./: Cargo.toml  Makefile.toml  Rocket.toml
.github/workflows/: build.yml  flow.yml  release.yml
src/: main.rs
src/server/: mod.rs
src/server/routes/: files.rs  index.rs  mod.rs
