[package]
name = "rust-api"
version = "3.0.0"
edition = "2021"
authors = ["Shift <shiftkeydeveloper@gmail.com>"]
description = "Obvilion Network Rust api"
repository = "https://github.com/ObvilionNetwork/rust-api.git"
homepage = "https://obvilion.ru/"
license = "AGPL-3.0"
readme = "readme.md"
include = ["src/**/*.rs", "readme.md", "Cargo.toml", "Cargo.lock"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
